--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.15.0",
     "framer-motion": "^7.10.3",
+    "immer": "^9.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -18,6 +19,7 @@
     "react-toastify": "^9.1.1",
     "reactstrap": "^9.1.5",
     "remixicon": "^2.5.0",
+    "use-immer": "^0.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
